[package]
name = "yellowstone-grpc-geyser"
version = "6.1.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Plugin"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }
default-run = "yellowstone-grpc-geyser"

[dependencies]
affinity = { workspace = true }
agave-geyser-plugin-interface = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = "2.0.1"
bs58 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "signal"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["gzip", "zstd", "tls", "tls-roots"] }
tonic-health = { workspace = true }
yellowstone-grpc-proto = { workspace = true, features = ["convert", "plugin"] }
prost = "0.13.5"
rdkafka = { version = "0.37.0", features = ["ssl", "sasl"] }
time = { version = "0.3.41", features = ["macros", "serde"] }
dashmap = "7.0.0-rc2"
moka = { version = "=0.5.4", features = ["future"] }
redis = { version = "0.31.0", features = ["aio", "connection-manager", "tokio-comp"] }
deadpool-redis = "0.20.0"
async-nats = "0.41.0"
flume = "0.11.1"
solana-nats-geyser-structs = { git = "ssh://git@github.com/bwarelabs/solana-nats-geyser-structs.git", branch = "main" }
toml = "0.8.22"

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[lints]
workspace = true
